k8-manifests/qa/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: qa
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: qa
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
